--- a/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
@@ -48,14 +48,14 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:Translate 'About eTools Ultimate'}" />
+                            Text="{i18n:StringLocalizer 'About eTools Ultimate'}" />
 
                         <TextBlock
                             Margin="0,0,0,15"
                             Text="{Binding AppDescription}"
                             TextWrapping="Wrap" />
 
-                        <TextBlock Text="{i18n:Translate 'Our tool simplifies the editing process for developers.'}" TextWrapping="Wrap" />
+                        <TextBlock Text="{i18n:StringLocalizer 'Our tool simplifies the editing process for developers.'}" TextWrapping="Wrap" />
                     </StackPanel>
                 </ui:Card>
 
@@ -66,7 +66,7 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:Translate 'Main Features'}" />
+                            Text="{i18n:StringLocalizer 'Main Features'}" />
 
                         <StackPanel Margin="10,0,0,0">
                             <Grid Margin="0,0,0,8">
@@ -83,7 +83,7 @@
 
                                 <TextBlock
                                     Grid.Column="1"
-                                    Text="{i18n:Translate 'Editing of .txt, .h and .inc files with structured interfaces'}"
+                                    Text="{i18n:StringLocalizer 'Editing of .txt, .h and .inc files with structured interfaces'}"
                                     TextWrapping="Wrap" />
                             </Grid>
 
@@ -101,7 +101,7 @@
 
                                 <TextBlock
                                     Grid.Column="1"
-                                    Text="{i18n:Translate 'Advanced categorization by element types'}"
+                                    Text="{i18n:StringLocalizer 'Advanced categorization by element types'}"
                                     TextWrapping="Wrap" />
                             </Grid>
 
@@ -119,7 +119,7 @@
 
                                 <TextBlock
                                     Grid.Column="1"
-                                    Text="{i18n:Translate 'Optimized for performance and user-friendliness'}"
+                                    Text="{i18n:StringLocalizer 'Optimized for performance and user-friendliness'}"
                                     TextWrapping="Wrap" />
                             </Grid>
                         </StackPanel>
@@ -133,7 +133,7 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:Translate 'Development Team'}" />
+                            Text="{i18n:StringLocalizer 'Development Team'}" />
 
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -207,7 +207,7 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:Translate 'System Requirements'}" />
+                            Text="{i18n:StringLocalizer 'System Requirements'}" />
 
                         <Grid Margin="0,0,0,5">
                             <Grid.ColumnDefinitions>
@@ -215,8 +215,8 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock FontWeight="SemiBold" Text="{i18n:Translate 'Operating System:'}" />
-                            <TextBlock Grid.Column="1" Text="{i18n:Translate 'Windows 10 or 11'}" />
+                            <TextBlock FontWeight="SemiBold" Text="{i18n:StringLocalizer 'Operating System:'}" />
+                            <TextBlock Grid.Column="1" Text="{i18n:StringLocalizer 'Windows 10 or 11'}" />
                         </Grid>
 
                         <Grid Margin="0,0,0,5">
@@ -225,8 +225,8 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock FontWeight="SemiBold" Text="{i18n:Translate 'RAM:'}" />
-                            <TextBlock Grid.Column="1" Text="{i18n:Translate '4 GB minimum, 8 GB recommended'}" />
+                            <TextBlock FontWeight="SemiBold" Text="{i18n:StringLocalizer 'RAM:'}" />
+                            <TextBlock Grid.Column="1" Text="{i18n:StringLocalizer '4 GB minimum, 8 GB recommended'}" />
                         </Grid>
 
                         <Grid Margin="0,0,0,5">
@@ -235,8 +235,8 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock FontWeight="SemiBold" Text="{i18n:Translate 'Storage:'}" />
-                            <TextBlock Grid.Column="1" Text="{i18n:Translate '200 MB available space'}" />
+                            <TextBlock FontWeight="SemiBold" Text="{i18n:StringLocalizer 'Storage:'}" />
+                            <TextBlock Grid.Column="1" Text="{i18n:StringLocalizer '200 MB available space'}" />
                         </Grid>
                     </StackPanel>
                 </ui:Card>
@@ -249,9 +249,9 @@
                     <Button
                         Margin="0,0,15,0"
                         Command="{Binding OpenWebsiteCommand}"
-                        Content="{i18n:Translate 'Visit Website'}" />
+                        Content="{i18n:StringLocalizer 'Visit Website'}" />
 
-                    <Button Command="{Binding CheckForUpdatesCommand}" Content="{i18n:Translate 'Check for Updates'}" />
+                    <Button Command="{Binding CheckForUpdatesCommand}" Content="{i18n:StringLocalizer 'Check for Updates'}" />
                 </StackPanel>
 
                 <!--  Copyright  -->
