--- a/eTools Ultimate/Views/Pages/Settings/SettingsPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/SettingsPage.xaml
@@ -175,7 +175,7 @@
                     Margin="4,0,4,0"
                     Padding="0"
                     VerticalAlignment="Stretch"
-                    Command="{Binding ViewModel.NavigateToAboutCommand, Mode=OneWay}"
+                    Command="{Binding NavigateToAboutCommand, Mode=OneWay}"
                     IsChevronVisible="False">
                     <Grid>
                         <Grid.ColumnDefinitions>
