--- a/eTools Ultimate/Views/Pages/ItemsPage.xaml
+++ b/eTools Ultimate/Views/Pages/ItemsPage.xaml
@@ -1686,15 +1686,20 @@
         </GridSplitter>
 
         <!--  Right Side - Form  -->
-        <ScrollViewer Grid.Column="2" VerticalScrollBarVisibility="Auto">
-            <Grid>
-                <!--  Add und Delete Buttons oben rechts  -->
-                <StackPanel
-                    Margin="0,10,30,0"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Orientation="Horizontal"
-                    ZIndex="1">
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            
+            <!--  Static Header mit Buttons  -->
+            <StackPanel
+                Grid.Row="0"
+                Margin="0,10,30,10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Orientation="Horizontal"
+                ZIndex="1">
                     <ui:Button ToolTip="Undo">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
@@ -1940,10 +1945,13 @@
                         Background="#FD292F"
                         Click="DeleteButton_Click"
                         Content="Delete" />
-                </StackPanel>
-
-                <!--  Formulare  -->
-                <StackPanel Margin="20">
+            </StackPanel>
+            
+            <!--  Scrollable Content  -->
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                <Grid>
+                    <!--  Formulare  -->
+                    <StackPanel Margin="20">
                     <ContentControl Content="{Binding ViewModel.ItemsView}" ContentTemplate="{StaticResource GeneralSectionTemplate}" />
                     <Separator Margin="0,10,0,5" />
                     <ContentControl ContentTemplate="{StaticResource InventoryStackSectionTemplate}" />
@@ -1963,9 +1971,10 @@
                     <ContentControl ContentTemplate="{StaticResource SoundSectionTemplate}" />
                     <Separator Margin="0,10,0,5" />
                     <ContentControl ContentTemplate="{StaticResource FlagsConditionsSectionTemplate}" />
-                </StackPanel>
-            </Grid>
-        </ScrollViewer>
+                    </StackPanel>
+                </Grid>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 
 </Page>
