--- a/eTools Ultimate/Views/Pages/AccessoriesPage.xaml
+++ b/eTools Ultimate/Views/Pages/AccessoriesPage.xaml
@@ -71,7 +71,12 @@
                     BorderThickness="0"
                     IsSynchronizedWithCurrentItem="True"
                     ItemsSource="{Binding AccessoriesView}"
-                    SelectedIndex="0">
+                    SelectedIndex="0"
+                    ScrollViewer.CanContentScroll="False"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.PanningMode="VerticalOnly"
+                    MinHeight="200">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Background" Value="Transparent" />
@@ -251,10 +256,16 @@
                 <ScrollViewer
                     x:Name="AccessoryScrollViewer"
                     Grid.Row="2"
-                    VerticalScrollBarVisibility="Auto">
-                    <ItemsControl ItemsSource="{Binding SelectedItem.AbilityOptionData, Mode=OneWay, ElementName=AccessoriesListView}">
-                        <!--  Single column layout  -->
-                        <ItemsControl.ItemTemplate>
+                    VerticalScrollBarVisibility="Auto"
+                    CanContentScroll="True"
+                    PanningMode="VerticalOnly"
+                    ZoomMode="Disabled"
+                    Focusable="True"
+                    IsTabStop="True">
+                    <ItemsControl 
+                        ItemsSource="{Binding SelectedItem.AbilityOptionData, Mode=OneWay, ElementName=AccessoriesListView}">
+                            <!--  Single column layout  -->
+                            <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Border
                                     Margin="0,0,0,12"
