--- a/eTools Ultimate/Views/Pages/MotionsPage.xaml
+++ b/eTools Ultimate/Views/Pages/MotionsPage.xaml
@@ -369,15 +369,20 @@
             </GridSplitter>
 
             <!--  Right Side - Form  -->
-            <ScrollViewer Grid.Column="2" VerticalScrollBarVisibility="Auto">
-                <Grid>
-                    <!--  Add and Delete Buttons top right  -->
-                    <StackPanel
-                        Margin="0,10,30,0"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Orientation="Horizontal"
-                        ZIndex="1">
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                
+                <!--  Static Header mit Buttons  -->
+                <StackPanel
+                    Grid.Row="0"
+                    Margin="0,10,30,10"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Orientation="Horizontal"
+                    ZIndex="1">
                         <ui:Button Command="{Binding UndoCommand}" ToolTip="{i18n:StringLocalizer 'Undo'}">
                             <ui:SymbolIcon Symbol="ArrowUndo24" />
                         </ui:Button>
@@ -411,10 +416,13 @@
                             Background="#FD292F"
                             Command="{Binding DeleteCommand}"
                             Content="{i18n:StringLocalizer 'Delete'}" />
-                    </StackPanel>
-
-                    <!--  Form  -->
-                    <StackPanel Margin="20">
+                </StackPanel>
+                
+                <!--  Scrollable Content  -->
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                    <Grid>
+                        <!--  Form  -->
+                        <StackPanel Margin="20">
                         <ContentControl Content="{Binding MotionsView}" ContentTemplate="{StaticResource MotionDetailsSectionTemplate}" />
 
                         <!--  3D Model Preview Section  -->
@@ -472,9 +480,10 @@
                                 </Grid>
                             </Grid>
                         </StackPanel>
-                    </StackPanel>
-                </Grid>
-            </ScrollViewer>
+                        </StackPanel>
+                    </Grid>
+                </ScrollViewer>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
