--- a/eTools Ultimate/Views/Pages/MoversPage.xaml
+++ b/eTools Ultimate/Views/Pages/MoversPage.xaml
@@ -1090,15 +1090,20 @@
         </GridSplitter>
 
         <!--  Right Side - Form  -->
-        <ScrollViewer Grid.Column="2" VerticalScrollBarVisibility="Auto">
-            <Grid>
-                <!--  Add und Delete Buttons oben rechts  -->
-                <StackPanel
-                    Margin="0,10,35,0"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Orientation="Horizontal"
-                    ZIndex="1">
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            
+            <!--  Static Header mit Buttons  -->
+            <StackPanel
+                Grid.Row="0"
+                Margin="0,10,35,10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Orientation="Horizontal"
+                ZIndex="1">
                     <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
@@ -1419,10 +1424,13 @@
                         Background="#FD292F"
                         Command="{Binding RemoveMoverCommand}"
                         Content="{i18n:StringLocalizer 'Delete'}" />
-                </StackPanel>
-
-                <!--  Formulare  -->
-                <StackPanel Margin="20">
+            </StackPanel>
+            
+            <!--  Scrollable Content  -->
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                <Grid>
+                    <!--  Formulare  -->
+                    <StackPanel Margin="20">
                     <ContentControl
                         Content="{Binding MoversView}"
                         ContentTemplate="{StaticResource BasicInfoSectionTemplate}"
@@ -1802,8 +1810,9 @@
                         </StackPanel>
                     </StackPanel>
 
-                </StackPanel>
-            </Grid>
-        </ScrollViewer>
+                    </StackPanel>
+                </Grid>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Page> 
