--- a/eTools Ultimate/Views/Pages/SkillPage.xaml
+++ b/eTools Ultimate/Views/Pages/SkillPage.xaml
@@ -543,15 +543,19 @@
         </GridSplitter>
 
         <!-- Right Side - Form -->
-        <ScrollViewer Grid.Column="2"
-                VerticalScrollBarVisibility="Auto">
-            <Grid>
-                <!-- Add und Delete Buttons oben rechts -->
-                <StackPanel Orientation="Horizontal" 
-                          HorizontalAlignment="Right" 
-                          VerticalAlignment="Top"
-                          Margin="0,10,30,0"
-                          ZIndex="1">
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            
+            <!-- Static Header mit Buttons -->
+            <StackPanel Grid.Row="0"
+                      Orientation="Horizontal" 
+                      HorizontalAlignment="Right" 
+                      VerticalAlignment="Top"
+                      Margin="0,10,30,10"
+                      ZIndex="1">
                     <ui:Button
                              ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24"/>
@@ -578,15 +582,19 @@
                              Content="{i18n:StringLocalizer 'Delete'}" 
                              Background="#FD292F"
                              Click="DeleteButton_Click"/>
-                </StackPanel>
-                
-                <!-- Formulare -->
+            </StackPanel>
+            
+            <!-- Scrollable Content -->
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                <Grid>
+                    <!-- Formulare -->
                 <StackPanel Margin="20">
                     <ContentControl Content="{Binding ViewModel}" ContentTemplate="{StaticResource BasicInfoSectionTemplate}"/>
                     <Separator Margin="0,10,0,5"/>
                     <ContentControl Content="{Binding ViewModel}" ContentTemplate="{StaticResource CombatDetailsSectionTemplate}"/>
                 </StackPanel>
-            </Grid>
-        </ScrollViewer>
+                </Grid>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Page> 
